2011-02-17  Andrew Wilson  <atwilson@chromium.org>

Unreviewed, rolling out r78936.
        http://trac.webkit.org/changeset/78936
        https://bugs.webkit.org/show_bug.cgi?id=54632

        Breaks chromium build

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        * src/WebFrameImpl.h:

Canonical link: https://commits.webkit.org/68903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78940 268f45cc-cd09-0410-ab3c-d52691b4dbfc