Source/WebKit/chromium/public/WebFrame.h
@@ -143,7 +143,6 @@ public:
 
     // The scroll offset from the top-left corner of the frame in pixels.
     virtual WebSize scrollOffset() const = 0;
-    virtual void setScrollOffset(const WebSize&) = 0;
 
     // The size of the contents area.
     virtual WebSize contentsSize() const = 0;
