Source/WebKit/chromium/src/WebFrameImpl.h
@@ -73,7 +73,6 @@ public:
     virtual WebURL openSearchDescriptionURL() const;
     virtual WebString encoding() const;
     virtual WebSize scrollOffset() const;
-    virtual void setScrollOffset(const WebSize&);
     virtual WebSize contentsSize() const;
     virtual int contentsPreferredWidth() const;
     virtual int documentElementScrollHeight() const;
